# sp-miniproject

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  build_commands.md  compile_commands.json  conclusion.md  latex-code.sh  test.dot  test_results.json  todo.md
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: benchmark.cmake  gtest.cmake
include/: charts.hpp  concepts.hpp  environment.hpp  gooberdoober.hpp  hash.hpp  observer.hpp  reactant.hpp  reactant.impl.hpp  reaction.hpp  seihr.hpp  symboltable.hpp  vessel.hpp
src/: charts.cpp  gooberdoober.cpp  hello.cpp  main.cpp  observer.cpp  reactant.cpp  reaction.cpp  symboltable.cpp  vessel.cpp
tests/: CMakeLists.txt  gooberdoober.cpp  reactions.cpp  tests_circadianRhythm.cpp  tests_reactions.cpp  tests_seihr.cpp  tests_simulation.cpp  tests_vessel.cpp  vessel.cpp
